--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTune">
+        <activity android:name=".SignUp"
+            android:exported="false"></activity>
         <activity
             android:name=".LoginActivity"
             android:exported="true">
