--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = "31.1.1"
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -40,5 +44,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.8.0"
     implementation "com.github.bumptech.glide:compiler:4.8.0"
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
 
 }
